--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-	<title>Simple Calculator</title>
+    <title>Simple Calculator</title>
 </head>
-<body bgcolor=skyblue>
+<body bgcolor="skyblue">
+
+    <h1>Simple Calculator</h1>
+
+</body>
 </html>
