--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 <head>
     <title>Simple Calculator</title>
+    <style>
+        body {
+            font-family: Arial;
+            background: skyblue;
+            text-align: center;
+            padding-top: 80px;
+        }
+    </style>
 </head>
-<body bgcolor="skyblue">
 
+<body>
     <h1>Simple Calculator</h1>
-
 </body>
 </html>
