updated by jathin
appended style tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
             text-align: center;
             padding-top: 80px;
         }
+	.calculator {
+  	    width: 300px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.15);
+}
+
     </style>
 </head>
 
