--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <h1>Simple Calculator</h1>
 <div class="calculator">
-    
+    <input type="text" id="display" disabled>
   </div>
 
 </body>
