--- a/index.html
+++ b/index.html
@@ -14,9 +14,32 @@
             padding: 20px;
             background: #ffffff;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.15);
+            box-shadow: 0 0 10px rgba            (0,0,0,0.15);
 }
+input {
+            width: 230px;
+            height: 40px;
+            margin-bottom: 15px;
+            font-size: 22px;
+            text-align: right;
+            padding-right: 10px;
+        }
 
+        button {
+            width: 60px;
+            height: 40px;
+            margin: 5px;
+            font-size: 18px;
+            border: none;
+            border-radius: 5px;
+            background: #3498db;
+            color: white;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #2980b9;
+        }
     </style>
 </head>
 
